--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
             <h1 class="current-city" id="current-city">Paris</h1>
             <p class="current-details">
               <span id="current-date"></span>, moderate rain <br />
-              Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
+              Humidity: <strong id="humidity"> </strong>, Wind:
+              <strong id="wind"></strong>
             </p>
           </div>
           <div class="current-temperature">
