--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
           <div>
             <h1 class="current-city" id="current-city">Paris</h1>
             <p class="current-details">
-              <span id="current-date"></span>, moderate rain <br />
-              Humidity: <strong id="humidity"> </strong>, Wind:
-              <strong id="wind"></strong>
+              <span id="current-date"></span>,
+              <span id="condition"> data.condition.description</span> <br />
+              Humidity:
+              <strong id="humidity"> %</strong>, Wind:
+              <strong id="wind">data.wind.degree</strong>
             </p>
           </div>
           <div class="current-temperature">
