--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
           <div>
             <h1 class="current-city" id="current-city">Paris</h1>
             <p class="current-details">
-              <span id="current-date"></span>,
-              <span id="condition"> data.condition.description</span> <br />
+              <span id="current-date"></span>, <span id="condition"> </span>
+              <br />
               Humidity:
-              <strong id="humidity"> %</strong>, Wind:
-              <strong id="wind">data.wind.degree</strong>
+              <strong id="humidity"></strong> <strong>%</strong> , Wind:
+              <strong id="wind"> </strong><strong>km/h </strong>
             </p>
           </div>
           <div class="current-temperature">
