updated vercel url

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             on GitHub</a
           >
           and
-          <a href="https://she-codes-test.vercel.app/" target="_blank"
+          <a href="https://week7-self.vercel.app/" target="_blank"
             >hosted on Vercel</a
           >
         </p>
