--- a/index.html
+++ b/index.html
@@ -53,10 +53,7 @@
             >Hasti Salehi</a
           >
           and is
-          <a
-            href="https://github.com/Squiggly7525/sheCodesTest"
-            target="_blank"
-          >
+          <a href="https://github.com/Squiggly7525/Week7" target="_blank">
             on GitHub</a
           >
           and
