added icon, css and js

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             </p>
           </div>
           <div class="current-temperature">
+            <div id="icon"></div>
             <span class="current-temperature-icon">☀️</span
             ><span class="current-temperature-value" id="temperature">24</span
             ><span class="current-temperature-unit">°C</span>
