fixed icon bugs(style)

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </div>
           <div class="current-temperature">
             <div id="icon"></div>
-            ><span class="current-temperature-value" id="temperature"></span
+            <span class="current-temperature-value" id="temperature"></span
             ><span class="current-temperature-unit">°C</span>
           </div>
         </div>
